논문 웹크롤링

--- a/python_excel/01.엑셀자동화기초.ipynb
+++ b/python_excel/01.엑셀자동화기초.ipynb
@@ -4,28 +4,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (515940496.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    pip3 install xiwings\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install xiwings\n",
-    "pip install appscript\n",
-    "pip install psutil"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#여기서 설치하는 것들 떄문에 기존 numpy 같은 pandas가 에러가 많이 났다.."
+   ]
   }
  ],
  "metadata": {
