--- a/python_basic/02.정적페이지크롤링/09.RISS논문크롤링.ipynb
+++ b/python_basic/02.정적페이지크롤링/09.RISS논문크롤링.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "\n",
+    "\n",
     "\n",
     "# 파라미터 종류가 많은 경우 꿀팁\n",
     "param={\n",
@@ -157,7 +159,93 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import urllib3\n",
+    "urllib3.disable_warnings() # warning message 막는 법\n",
+    "import pandas as pd\n",
+    "\n",
+    "data=[]\n",
+    "for i in range(1,100):\n",
+    "    # 파라미터 종류가 많은 경우 꿀팁\n",
+    "    param={\n",
+    "        'isDetailSearch': 'N',\n",
+    "    'searchGubun': 'true',\n",
+    "    'viewYn': 'OP',\n",
+    "    'strQuery': '딥러닝',\n",
+    "    'order': '/DESC',\n",
+    "    'onHanja': 'false',\n",
+    "    'strSort': 'RANK',\n",
+    "    'iStartCount': 0,\n",
+    "    'fsearchMethod': 'search',\n",
+    "    'sflag': 1,\n",
+    "    'isFDetailSearch': 'N',\n",
+    "    'pageNumber': i,\n",
+    "    'icate': 're_a_kor',\n",
+    "    'colName': 're_a_kor',\n",
+    "    'pageScale': 100,\n",
+    "    'isTab': 'Y',\n",
+    "    'query': '딥러닝'\n",
+    "    }\n",
+    "\n",
+    "    response =requests.get(\"https://www.riss.kr/search/Search.do\",params=param)\n",
+    "    html=response.text\n",
+    "    soup=BeautifulSoup(html,'html.parser')\n",
+    "    articles=soup.select(\".srchResultListW>ul>li\") # .cont.ml60도 가능\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    #헤더가 필요한 경우\n",
+    "    header={\n",
+    "        'User-Agent' : 'Mozilla/5.0',\n",
+    "        'Referer' :'https://www.riss.kr/search/Search.do?isDetailSearch=N&searchGubun=true&viewYn=OP&queryText=&strQuery=%EB%94%A5%EB%9F%AC%EB%8B%9D&exQuery=&exQueryText=&order=%2FDESC&onHanja=false&strSort=RANK&p_year1=&p_year2=&iStartCount=0&orderBy=&mat_type=&mat_subtype=&fulltext_kind=&t_gubun=&learning_type=&ccl_code=&inside_outside=&fric_yn=&db_type=&image_yn=&gubun=&kdc=&ttsUseYn=&l_sub_code=&fsearchMethod=search&sflag=1&isFDetailSearch=N&pageNumber=1&resultKeyword=&fsearchSort=&fsearchOrder=&limiterList=&limiterListText=&facetList=&facetListText=&fsearchDB=&icate=re_a_kor&colName=re_a_kor&pageScale=100&isTab=Y&regnm=&dorg_storage=&language=&language_code=&clickKeyword=&relationKeyword=&query=%EB%94%A5%EB%9F%AC%EB%8B%9D'\n",
+    "    }\n",
+    "    for article in articles:\n",
+    "        title=article.select_one(\".title > a\").text\n",
+    "        link='https://www.riss.kr/'+article.select_one(\".title > a\").attrs['href']\n",
+    "\n",
+    "        #상세 페이지 요청\n",
+    "        response=requests.get(link, headers=header, verify=False)\n",
+    "        html=response.text\n",
+    "        soup=BeautifulSoup(html,'html.parser')\n",
+    "\n",
+    "        # 2. 텍스트를 기준으로 찾기\n",
+    "        #find_next_sibling(), find_previous_sibling(), find_parent()\n",
+    "        press=soup.find('span',string='발행기관').find_next_sibling().text\n",
+    "        year=soup.find('span',string='발행연도').find_next_sibling().text\n",
+    "        if soup.find('span',string='주제어'):\n",
+    "            keywords=soup.find('span',string='주제어').find_next_sibling().text.split(';')\n",
+    "            keywords=[keyword.strip() for keyword in keywords]\n",
+    "        else:\n",
+    "            keywords=[]\n",
+    "        print(title,link,press,year,keywords)\n",
+    "        data.append([title,link,press,year,keywords])\n",
+    "\n",
+    "    #마지막 페이지 체크\n",
+    "    if soup.select_one(\".next1\") == None:\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.DataFrame(data,columns=['제목','링크','연도','주제어'])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#엑셀 저장\n",
+    "df.to_excel(\"RISS_deeplearning.xlsx\")"
+   ]
   }
  ],
  "metadata": {
