--- a/deeplearning_dbpia.ipynb
+++ b/deeplearning_dbpia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://www.dbpia.co.kr/search/topSearch?searchOption=all&query=%EB%94%A5%EB%9F%AC%EB%8B%9D#a'\n",
+    "url = 'https://www.dbpia.co.kr/search/topSearch?searchOption=all&query=%EB%94%A5%EB%9F%AC%EB%8B%9D'\n",
     "\n",
     "res = []\n",
     "\n",
@@ -32,15 +32,15 @@
     "if not checkbox.is_selected(): # 만약 KCI 등재 체크박스가 체크되어 있지 않다면 체크\n",
     "    checkbox.click()\n",
     "\n",
-    "driver.implicitly_wait(100) # 페이지 로딩이 완료될 때까지 대기\n",
+    "driver.implicitly_wait(10) # 페이지 로딩이 완료될 때까지 대기\n",
     "\n",
     "cnt = 0 \n",
     "page = []\n",
     "\n",
-    "for n in range(1,187): # KCI에 등재된 논문은 총 3724건(한 페이지당 20건씩 있음)\n",
+    "for n in range(1,10): # KCI에 등재된 논문은 총 1943건(한 페이지당 20건씩 있음)\n",
     "    driver.execute_script(\"onclick=setPageNum({})\".format(n))\n",
     "    # 자바스크립트로 페이지가 이동되기 때문에 해당 코드를 실행\n",
-    "    time.sleep(5) # 페이지가 완전히 로드될 때까지 10초 대기\n",
+    "    time.sleep(10) # 페이지가 완전히 로드될 때까지 10초 대기\n",
     "    html = driver.page_source \n",
     "\n",
     "    soup = BeautifulSoup(html, 'lxml') # 페이지 소스를 lxml로 변환\n",
@@ -63,9 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 총 1430건의 논문 수집 성공\n",
     "len(res)"
@@ -73,21 +84,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 35 entries, 0 to 34\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   제목        35 non-null     object\n",
+      " 1   날짜        35 non-null     object\n",
+      " 2   abstract  35 non-null     object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 972.0+ bytes\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.DataFrame(res, columns=['제목','날짜','abstract'])\n",
     "df.info()\n",
     "\n",
-    "df.to_csv('dbpia2014_2023_미술_치료.csv', index=False)"
+    "df.to_csv('dbpia2014_2023_미술_치료.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 35 entries, 0 to 34\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   Unnamed: 0  35 non-null     int64  \n",
+      " 1   제목          35 non-null     object \n",
+      " 2   날짜          35 non-null     float64\n",
+      " 3   abstract    23 non-null     object \n",
+      "dtypes: float64(1), int64(1), object(2)\n",
+      "memory usage: 1.2+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "dff = pd.read_csv('dbpia2014_2023_미술_치료.csv',encoding='utf-8')\n",
     "dff.info()"
@@ -95,9 +141,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>제목</th>\n",
+       "      <th>날짜</th>\n",
+       "      <th>abstract</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Sentinel-2 위성과 국토위성에서의 딥러닝 기반 초해상화 기법 비교 연구</td>\n",
+       "      <td>2023.12</td>\n",
+       "      <td>딥러닝 기반 초해상화 모델은 저해상도 영상을 효과적으로 고해상도로 변환하여 보다 선...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>시뮬레이션 데이터로 학습된 딥러닝 모델을 사용한 항공 라이다 데이터의 건물 모델링</td>\n",
+       "      <td>2023.12</td>\n",
+       "      <td>이를 위해 딥러닝 기술을 사용하여 건물 모델링의 중요한 과정인 지붕면 분할을 수행하...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>위상잠금 적외선열화상의 가우시안 푸리에 변환 및 딥러닝을 활용한 해상도 향상 연구</td>\n",
+       "      <td>2023.12</td>\n",
+       "      <td>또한, 노이즈가 존재하는 이미지의 해상도를 향상하기 위해 딥러닝 기법 중 초고해상도...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>딥러닝 기반 초해상화 모델을 이용한 드론 사진의 해상도 향상 연구</td>\n",
+       "      <td>2023.12</td>\n",
+       "      <td>고해상 위성 영상 및 항공 영상을 이용할 수 있으나, 경제적 부담으로 인해 지속적인...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>공간 질의응답 시스템에서의 개체링킹과 딥러닝 모델을 활용한 멘션 탐지</td>\n",
+       "      <td>2023.12</td>\n",
+       "      <td>이를 위해 딥러닝 모델인 BERT, RoBERTa 그리고 ChatGPT를 사용하여 ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                                             제목       날짜  \\\n",
+       "0           0    Sentinel-2 위성과 국토위성에서의 딥러닝 기반 초해상화 기법 비교 연구  2023.12   \n",
+       "1           1  시뮬레이션 데이터로 학습된 딥러닝 모델을 사용한 항공 라이다 데이터의 건물 모델링  2023.12   \n",
+       "2           2  위상잠금 적외선열화상의 가우시안 푸리에 변환 및 딥러닝을 활용한 해상도 향상 연구  2023.12   \n",
+       "3           3           딥러닝 기반 초해상화 모델을 이용한 드론 사진의 해상도 향상 연구  2023.12   \n",
+       "4           4         공간 질의응답 시스템에서의 개체링킹과 딥러닝 모델을 활용한 멘션 탐지  2023.12   \n",
+       "\n",
+       "                                            abstract  \n",
+       "0  딥러닝 기반 초해상화 모델은 저해상도 영상을 효과적으로 고해상도로 변환하여 보다 선...  \n",
+       "1  이를 위해 딥러닝 기술을 사용하여 건물 모델링의 중요한 과정인 지붕면 분할을 수행하...  \n",
+       "2  또한, 노이즈가 존재하는 이미지의 해상도를 향상하기 위해 딥러닝 기법 중 초고해상도...  \n",
+       "3  고해상 위성 영상 및 항공 영상을 이용할 수 있으나, 경제적 부담으로 인해 지속적인...  \n",
+       "4  이를 위해 딥러닝 모델인 BERT, RoBERTa 그리고 ChatGPT를 사용하여 ...  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dff.head()"
    ]
@@ -282,7 +416,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
