--- a/python_RISS/python_DBPIA/selenium.ipynb
+++ b/python_RISS/python_DBPIA/selenium.ipynb
@@ -2,15 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "추출할 논문의 수 :  1562\n"
+      "추출할 논문의 수 :  1562\n",
+      "추출한 논문의 수 :  726\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 726 entries, 0 to 725\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   keywords  398 non-null    object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 5.8+ KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>keywords</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>#CNN, #DL Model, #Training and Validation Data...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>#바퀴식 주행로봇, #경로 찾기, #딥강화학습, #딥러닝, #자율주행로봇, #Whe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>#분류, #감성어휘, #병원, #실내이미지, #딥러닝, #Classification...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>#Instance segmentation, #Deep learning, #Slope...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>#PM\\n10\\nDeep Learning, #Satellite Image, #Sen...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            keywords\n",
+       "0  #CNN, #DL Model, #Training and Validation Data...\n",
+       "1  #바퀴식 주행로봇, #경로 찾기, #딥강화학습, #딥러닝, #자율주행로봇, #Whe...\n",
+       "2  #분류, #감성어휘, #병원, #실내이미지, #딥러닝, #Classification...\n",
+       "3  #Instance segmentation, #Deep learning, #Slope...\n",
+       "4  #PM\\n10\\nDeep Learning, #Satellite Image, #Sen..."
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
